syntax = "proto3";

option java_multiple_files = true;
option objc_class_prefix = "HLW";

package storage;

message MatchIssuersRequest {
    string text_to_match = 1;
}

message MatchIssuersResponse {
    message CusipCandidate {
        string cusip = 1;
        string name = 2;
    }
    repeated CusipCandidate cusip_candidate = 1;
}

enum IssuerType {
    UNKNOWN = 0;
    CUSIP = 1;
    CIK = 2;
}

message GetIssuersDataRequest {
    IssuerType issuer_type = 1;
}

message GetIssuersDataResponse {
    IssuerType issuer_type = 1;
}

// The sample service definition.
service StorageService {
    rpc MatchIssuers (MatchIssuersRequest) returns (MatchIssuersResponse) {}
    rpc GetIssuersData (GetIssuersDataRequest) returns (GetIssuersDataResponse) {}
}
